 cnp-mitre-t1571-postgresql-ingress-9-9f5qk.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-mitre-t1571-postgresql-ingress-wlw43yt
  namespace: kube-system
spec:
  description: "Allow ingress communication only through standard ports of PostgresSQL" 
  endpointSelector:
    matchLabels:
      controller-revision-hash: 7b445dc7b4
      k8s-app: cilium
      pod-template-generation: 1
  ingress:
  - toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
